# cpp20_modules

./: README.md  build.bat
src/: Animal.ixx  CMakeLists.txt  main.cpp
